--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
     <script src="script.js" defer></script>
   </head>
   <body>
-    <div></div>
+    <div class="game-buttons">
+      <button id="rock-btn">Rock</button>
+      <button id="paper-btn">Paper</button>
+      <button id="scissors-btn">Scissors</button>
+    </div>
   </body>
 </html>
