--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
   </head>
   <body>
     <div class="game-buttons">
-      <button id="rock-btn">Rock</button>
-      <button id="paper-btn">Paper</button>
-      <button id="scissors-btn">Scissors</button>
+      <button id="rock-btn" value="rock">Rock</button>
+      <button id="paper-btn" value="paper">Paper</button>
+      <button id="scissors-btn" value="scissor">Scissors</button>
     </div>
   </body>
 </html>
