add div container to display results

--- a/index.html
+++ b/index.html
@@ -14,5 +14,6 @@
       <button id="paper-btn" value="paper">Paper</button>
       <button id="scissors-btn" value="scissor">Scissors</button>
     </div>
+    <div class="results"></div>
   </body>
 </html>
