add emojis and little bit styling

--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
     <script src="script.js" defer></script>
   </head>
   <body>
+    <h1>Choose your weapon:</h1>
     <div class="game-buttons">
-      <button id="rock-btn" value="rock">Rock</button>
-      <button id="paper-btn" value="paper">Paper</button>
-      <button id="scissors-btn" value="scissor">Scissors</button>
+      <button class="btn" id="rock-btn" value="rock">✊</button>
+      <button class="btn" id="paper-btn" value="paper">✋</button>
+      <button class="btn" id="scissors-btn" value="scissor">✌️</button>
     </div>
     <div class="results"></div>
   </body>
